Revert "Merge pull request #6 from Kamama/sargis/rdr"
This reverts commit b43a6e51aa0edb7239d8560f759c7f79a01d3f83, reversing
changes made to be1a4f524fb8b87faad959140761addfac3797ee.

--- a/lib/cpp/test/Makefile.am
+++ b/lib/cpp/test/Makefile.am
@@ -60,7 +60,6 @@ Benchmark_SOURCES = \
 Benchmark_LDADD = libtestgencpp.la
 
 check_PROGRAMS = \
-	UnitTests \
 	TFDTransportTest \
 	TPipedTransportTest \
 	DebugProtoTest \
@@ -72,6 +71,7 @@ check_PROGRAMS = \
 	TransportTest \
 	ZlibTest \
 	TFileTransportTest \
+	UnitTests \
 	link_test \
 	OpenSSLManualInitTest \
 	EnumTest
@@ -90,8 +90,7 @@ UnitTests_SOURCES = \
 	TBufferBaseTest.cpp \
 	Base64Test.cpp \
 	ToStringTest.cpp \
-	TypedefTest.cpp \
-        TServerSocketTest.cpp
+	TypedefTest.cpp
 
 if !WITH_BOOSTTHREADS
 UnitTests_SOURCES += \
